monitoring entreprise labs